# OFSintel

./: .gitmodules  CMakeLists.txt  README.md  build-macos.sh
.github/: FUNDING.yml
.github/workflows/: cmake_build.yml  macos_build.yml  main.yml  main18.yml  main19.yml  main2.yml  main21.yml  main22.yml  main4.yml  main5.yml  main6.yml  main8.yml  main9.yml  maingpt.yml
OFS-lib/Funscript/: Funscript.cpp  Funscript.h
src/: CMakeLists.txt  OFS_Project.cpp  OpenFunscripter.cpp
